--- a/cbcui/ui/VisionSelect.ui
+++ b/cbcui/ui/VisionSelect.ui
@@ -64,6 +64,9 @@
      </item>
      <item>
       <widget class="QPushButton" name="ui_rawDisplayButton">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="text">
         <string>Raw Display</string>
        </property>
