--- a/cbcui/ui/VisionTracking.ui
+++ b/cbcui/ui/VisionTracking.ui
@@ -351,6 +351,9 @@
            <property name="text">
             <string>U</string>
            </property>
+           <property name="autoRepeat">
+            <bool>true</bool>
+           </property>
           </widget>
          </item>
          <item>
@@ -390,6 +393,9 @@
            <property name="text">
             <string>L</string>
            </property>
+           <property name="autoRepeat">
+            <bool>true</bool>
+           </property>
           </widget>
          </item>
          <item>
@@ -402,6 +408,9 @@
            </property>
            <property name="text">
             <string>R</string>
+           </property>
+           <property name="autoRepeat">
+            <bool>true</bool>
            </property>
           </widget>
          </item>
@@ -435,6 +444,9 @@
            </property>
            <property name="text">
             <string>D</string>
+           </property>
+           <property name="autoRepeat">
+            <bool>true</bool>
            </property>
           </widget>
          </item>
